# snowpark-python

./: pyproject.toml
learning-steps/: 01-admin_steps.sql  02-db-setup.sql  03_create_pos_view.py  notes.md
learning-steps/04_fahrenheit_to_celsius_udf/: snowflake.yml
learning-steps/05_orders_update_sp/: snowflake.yml
learning-steps/05_orders_update_sp/orders_update_sp/: procedure.py
learning-steps/06_daily_city_metrics_update_sp/: snowflake.yml
learning-steps/06_daily_city_metrics_update_sp/daily_city_metrics_update_sp/: procedure.py
learning-steps/my_sprocs/: requirements.snowflake.txt  requirements.txt  snowflake.yml
learning-steps/my_sprocs/app/: procedures.py
